--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <strong class="heading advantages-section-heading">
             Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!
           </strong>
-          <h2 class="text">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</h2>
+          <h2 class="text advantages-section-description">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</h2>
           <ul class="clear-list advantages-list">
             <li class="advantages-item advantages-item-accent">
               <div class="advantages-card">
