--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
             <li class="navigation-item navigation-item-hotels">
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
+            <li class="navigation-item navigation-item-information">
+              <a class="navigation-link" href="#">Информация</a>
+            </li>
+            <li class="navigation-item navigation-item-media">
+              <a class="navigation-link" href="#">Фото и видео</a>
+            </li>
+            <li class="navigation-item navigation-item-map">
+              <a class="navigation-link" href="#">Карта штата</a>
+            </li>
+            <li class="navigation-item navigation-item-hotels">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>
           </ul>
         </nav>
       </header>
@@ -90,7 +102,7 @@
               <span class="advantages-text">&mdash; №4 &mdash;</span>
               <p class="advantages-text">Ехать в Седону из Лас-Вегаса совсем не&nbsp;скучно!</p>
             </li>
-            
+
             <li class="advantages-item advantages-card">
               <h3 class="advantages-title">
                 Мало<br> 
