--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,7 @@
         <h2 class="visually-hidden">Параметры поиска жилья</h2>
         <form class="filters-form-wrap" action="https://echo.htmlacademy.ru/" method="GET">
           <fieldset class="filters-fieldset">
-            <legend class="filters-legend">Инфраструктура</legend>
+            <legend class="filters-legend">Инфраструктура:</legend>
             <ul class="clear-list filters-list">
               <li class="filters-item">
                 <label class="filters-label">
@@ -66,7 +66,7 @@
           </fieldset>
 
           <fieldset class="filters-fieldset">
-            <legend class="filters-legend">Тип жилья</legend>
+            <legend class="filters-legend">Тип жилья:</legend>
             <ul class="clear-list filters-list">
               <li class="filters-item">
                 <label class="filters-label">
