--- a/catalog.html
+++ b/catalog.html
@@ -93,8 +93,8 @@
             <fieldset class="filters-fieldset">
               <legend class="filters-legend">Стоимость в сутки (р):</legend>
               <div class="filters-price-wrap">
-                <input class="filters-price-input" type="number" name="filter-price" placeholder="от 0" min="0" max="3000">
-                <input class="filters-price-input" type="number" name="filter-price" placeholder="до 3000" min="0" max="3000">
+                <input class="filters-price-input" type="text" name="filter-price" placeholder="от 0">
+                <input class="filters-price-input" type="text" name="filter-price" placeholder="до 3000">
               </div>
               <!--бегунок-->
               <div class="filters-price-range-wrap">
