--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="preload" href="fonts/PTSans-Bold.woff2" as="font">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-min.css">
     <title>HTML Academy: Седона</title>
   </head>
   <body class="page-body">
@@ -117,7 +117,7 @@
           <h2 class="visually-hidden">Карта города Седона</h2>
           <form class="search-form-wrap search-form-open" name="hotel-search-form" method="get" action="https://echo.htmlacademy.ru/">
             <p class="hotel-search-paragraph">
-              <label class="hotel-search-label" for="hotel-search-checkin"> Дата заезда:</label>
+              <label class="hotel-search-label" for="hotel-search-checkin">Дата заезда:</label>
               <input class="hotel-search-input"  id="hotel-search-checkin" type="text" name="checkin-date" placeholder="24 апреля 2017">
               <button class="hotel-search-controls-button calendar-button" type="button">
                 <svg width="21" height="23" viewBox="0 0 21 23" fill="#A9A9A9">
@@ -127,7 +127,7 @@
               </button>
             </p>
             <p class="hotel-search-paragraph">
-              <label class="hotel-search-label" for="hotel-search-checkout"> Дата выезда:</label>
+              <label class="hotel-search-label" for="hotel-search-checkout">Дата выезда:</label>
               <input class="hotel-search-input" id="hotel-search-checkout" type="text" name="checkout-date" placeholder="4 июля 2017">
               <button class="hotel-search-controls-button calendar-button" type="button">
                 <svg width="21" height="23" viewBox="0 0 21 23" fill="#A9A9A9">
