--- a/catalog.html
+++ b/catalog.html
@@ -98,11 +98,11 @@
               </div>
               <!--бегунок-->
               <div class="filters-price-range-wrap">
-                <div class="filters-price-scale">
-                  <div class="filters-price-bar"></div>
+                <div class="filters-price-scale" style="width: 100%;">
+                  <div class="filters-price-bar" style="margin-left: 0; width: 80%;"></div>
                 </div>
-                <div class="filters-price-toggle toggle-min" tabindex="0"></div>
-                <div class="filters-price-toggle toggle-max" tabindex="0"></div>
+                <div class="filters-price-toggle toggle-min" tabindex="0" style="left: 0;"></div>
+                <div class="filters-price-toggle toggle-max" tabindex="0" style="left: 80%;"></div>
               </div> 
             </fieldset>
             <button class="filters-submit-button" type="submit">Показать</button>   
